# nexa-sdk

./: .gitmodules  CLAUDE.md  MODULE.bazel  NOTICE  README.md
.github/actions/install-qdc-sdk/: action.yml
.github/actions/run-scorecard/: action.yml
.github/workflows/: _build-cli.yml  _build-docker.yml  _build-sdk.yml  _lint.yml  _qdc-pytest.yml  bench.yml  build-docker.yml  build-llama-cpp-windows.yml  build-sdk.yml  build.yml  docs.yml  lint.yml  release.yml  reusable-build.yml  scorecard.yml  test.yml
bindings/android/app/: build.gradle.kts
bindings/go/: device.go
bindings/python/: README.md
bindings/python/geniex/: auto.py  cli.py
cli/cmd/geniex/: BUILD.bazel  config.go  infer.go  infer_test.go  model.go  model_test.go  run.go  run_test.go  serve.go  version.go
cli/internal/config/: config.go
cli/internal/downloader/: http_test.go
cli/internal/model_hub/: BUILD.bazel  errors_test.go
cli/internal/render/: BUILD.bazel  writer_test.go
cli/internal/store/: BUILD.bazel  config_test.go  lock_test.go  model_test.go
cli/server/: BUILD.bazel  route_test.go
cli/server/handler/: BUILD.bazel  chat.go  chat_test.go
cli/server/middleware/: BUILD.bazel  middleware_test.go
cli/server/service/: keepalive.go  keepalive_test.go
docs/: build.md  docs.json
docs/cn/get-started/: platforms.mdx  what-is-geniex.mdx
docs/cn/models/: supported.mdx
docs/cn/resources/: faq.mdx  (+1 more)
examples/android/: build.gradle
notes/: build.md  run.md
scripts/qdc/: resolve_model.py  scorecard-models.json  scorecard.py
sdk/: BUILD.bazel  cmake.bzl
sdk/benchmark/: README.md  benchmark.c
sdk/benchmark/qdc/: scorecard-models.json
sdk/cmake/: zig-aarch64-linux-gnu.cmake
sdk/include/: geniex.h  logging.h
sdk/include/plugin/: ILlm.h  IVlm.h
sdk/model-manager/: Cargo.toml
sdk/model-manager/crates/core/: Cargo.toml
sdk/model-manager/crates/core/src/: config.rs  manifest_builder.rs  mapping.rs  transport.rs
sdk/model-manager/crates/core/src/source/ai_hub/: detect.rs  mod.rs  selector.rs
sdk/model-manager/crates/ffi/src/: chipset.rs
sdk/model-manager/include/: geniex_model.h
sdk/model-manager/tests/: test_model_manager.c
sdk/plugins/llama_cpp/include/: llm.h  params.h  vlm.h
sdk/plugins/llama_cpp/src/: llm.cpp  params.cpp  vlm.cpp
sdk/plugins/qairt/include/: driver_status.h  llm.h  qnn_runtime_utils.h  vlm.h
sdk/plugins/qairt/src/: llm.cpp  log_filter.cpp  plugin.cpp  vlm.cpp
sdk/src/: CMakeLists.txt  device.cpp  error.cpp  ml.cpp
sdk/tests/benchmark/qdc/: run_qdc_jobs.py  scorecard-models.json
sdk/tests/benchmark/qdc/tests/: test_scorecard.py  utils.py
tests/api/: test_resolve_device_map.py
tools/runtime_benchmark/: scoring_rubric.txt
(+55 files in other folders)
