load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")
load("//scripts:runfiles_symlink.bzl", "runfiles_symlinks")

package(default_visibility = ["//visibility:public"])

runfiles_symlinks(
    name = "sdk_runtime",
    data = select({
        "@platforms//os:windows": glob(
            [
                "pkg-geniex/lib/**/*.dll",
                "pkg-geniex/lib/**/*.so",
                "pkg-geniex/lib/**/*.cat",
            ],
            allow_empty = True,
        ),
        "@platforms//os:linux": glob(
            ["pkg-geniex/lib/**/*.so"],
            allow_empty = True,
        ),
    }),
    strip_prefix = "sdk/pkg-geniex/lib/",
)

cc_library(
    name = "sdk_lib",
    srcs = select({
        "@platforms//os:windows": ["pkg-geniex/lib/geniex.dll"],
        "@platforms//os:linux": ["pkg-geniex/lib/libgeniex.so"],
    }),
    hdrs = ["pkg-geniex/include/geniex.h"],
    data = [":sdk_runtime"],
    includes = ["pkg-geniex/include"],
    linkopts = select({
        "@platforms//os:linux": ["-Wl,-rpath,."],
        "//conditions:default": [],
    }),
)

pkg_files(
    name = "artifact",
    srcs = [":sdk_runtime"],
    strip_prefix = strip_prefix.from_pkg("pkg-geniex/lib"),
)

alias(
    name = "sdk",
    actual = ":sdk_lib",
)
